@@ -87,6 +87,8 @@ Post-v2.5.0
      watch with tcpdump
    - Introduce --no-self-confinement flag that allows daemons to work with
      sockets outside their run directory.
+   - Add 'mtu_request' column to the Interface table. It can be used to
+     configure the MTU of non-internal ports.
 
 v2.5.0 - 26 Feb 2016
 ---------------------
